// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmationDialog should not render cancel button if onCancel function is not provided 1`] = `
<Modal
  backdrop={false}
  onHide={null}
  show={true}
>
  <ModalHeader
    closeButton={true}
  >
    <ModalTitle>
      Confirm
    </ModalTitle>
  </ModalHeader>
  <ModalBody>
    <p>
      Something happened.
    </p>
  </ModalBody>
  <ModalFooter>
     
    <Button
      bsStyle="primary"
      className="core-btn"
      disabled={false}
      onClick={[Function]}
    >
      OK
    </Button>
  </ModalFooter>
</Modal>
`;

exports[`ConfirmationDialog should render invisible dialog 1`] = `
<Modal
  backdrop={false}
  onHide={[Function]}
  show={false}
>
  <ModalHeader
    closeButton={true}
  >
    <ModalTitle>
      Confirm
    </ModalTitle>
  </ModalHeader>
  <ModalBody>
    <p>
      Do you confirm?
    </p>
  </ModalBody>
  <ModalFooter>
     
    <Button
      bsStyle="primary"
      className="core-btn"
      disabled={false}
      onClick={[Function]}
    >
      OK
    </Button>
    <Button
      className="core-btn"
      disabled={false}
      onClick={[Function]}
    >
      Cancel
    </Button>
  </ModalFooter>
</Modal>
`;

exports[`ConfirmationDialog should render visible dialog with text 1`] = `
<Modal
  backdrop={false}
  onHide={[Function]}
  show={true}
>
  <ModalHeader
    closeButton={true}
  >
    <ModalTitle>
      Confirm
    </ModalTitle>
  </ModalHeader>
  <ModalBody>
    <p>
      Do you confirm?
    </p>
  </ModalBody>
  <ModalFooter>
     
    <Button
      bsStyle="primary"
      className="core-btn"
      disabled={false}
      onClick={[Function]}
    >
      OK
    </Button>
    <Button
      className="core-btn"
      disabled={false}
      onClick={[Function]}
    >
      Cancel
    </Button>
  </ModalFooter>
</Modal>
`;

exports[`ConfirmationDialog should render visible dialog with text and operation in progress 1`] = `
<Modal
  backdrop="static"
  onHide={[Function]}
  show={true}
>
  <ModalHeader
    closeButton={false}
  >
    <ModalTitle>
      Confirm
    </ModalTitle>
  </ModalHeader>
  <ModalBody>
    <p>
      Do you confirm?
    </p>
  </ModalBody>
  <ModalFooter>
    <img
      alt="Loading..."
      className="core-spinner"
      height={16}
      src="test-file-stub"
      width={16}
    />
     
    <Button
      bsStyle="primary"
      className="core-btn"
      disabled={true}
      onClick={[Function]}
    >
      OK
    </Button>
    <Button
      className="core-btn"
      disabled={true}
      onClick={[Function]}
    >
      Cancel
    </Button>
  </ModalFooter>
</Modal>
`;
